Atualização de dados pessoais

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <hr>
                     </blockquote>
                     <blockquote class="blockquote text-center ">
-                        <p> Sou Psicóloga, tenho 27 anos e atuo na área de saúde mental. </P>
+                        <p> Sou Psicóloga, tenho 28 anos. </P>
                         <p> Recentemente estou cursando Desenvolvimento de Sistemas na ETEC. </p>
                         <a href="https://www.linkedin.com/feed/ ">
                             <br> <br>
