--- a/index.html
+++ b/index.html
@@ -16,46 +16,43 @@
 <body>
     <!-- Nav -->
     <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="d-flex justify-content-around px-3 align-items-center" style="height: 70px;">
-                        <nav class="navbar navbar-expand-md navbar-light">
-                            <ul class="navbar-nav mx-auto" id="navegacao">
-                                <li class="nav-item px-2">
-                                    <a class="nav-link text-reset" href="#home">HOME</a>
-                                </li>
-                                <li class="nav-item px-2">
-                                    <a class="nav-link" href="#sobre">SOBRE</a>
-                                </li>
-                                <li class="nav-item px-2">
-                                    <a class="nav-link" href="#projetos">PROJETOS</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <div class="container-fluid">
+            <div class="d-flex fixed-top-md justify-content-center px-3 align-items-center navbar-dark bg-dark">
+                <nav class="navbar navbar-expand-md flex-sm-column ">
+                    <ul class="navbar-nav mx-auto" id="navegacao">
+                        <li class="nav-item px-2">
+                            <a class="nav-link text-reset" href="#home">HOME</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a class="nav-link" href="#sobre">SOBRE</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a class="nav-link" href="#projetos">PROJETOS</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                   CONTATOS
                                 </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="dropdown">
-                                        <a class="dropdown-item" href="https://www.instagram.com/_nanda_ingrid/">instagram</a>
-                                        <a class="dropdown-item" href="https://www.facebook.com/fernanda.ingrid.1460">facebook</a>
-                                        <a class="dropdown-item" href="https://github.com/developer-fernanda">github</E-mail></a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
-            </div>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="dropdown">
+                                <a class="dropdown-item" href="https://www.instagram.com/_nanda_ingrid/">instagram</a>
+                                <a class="dropdown-item" href="https://www.facebook.com/fernanda.ingrid.1460">facebook</a>
+                                <a class="dropdown-item" href="https://github.com/developer-fernanda">github</E-mail></a>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
 
+            </div>
         </div>
     </header>
+
 
     <div class="container">
         <!-- Home-->
         <section id="home">
-            <div class="row text-center mt-3">
+            <div class="row text-center mt-5">
                 <div class="col-12">
-                    <h3 class="m-3 font-weight-light"> Desenvolvimento de Sitemas - <small>  Programação Web </small></h3>
+                    <h3 class="m-3 font-weight-light"> Desenvolvimento de Sitemas <small> < Programação Web > </Programa></small></h3>
                     <hr>
                     <h5 class="font-weight-light"> Para o desenvolvimento desse projeto, utilizei recursos do html, css e bootstrap. </h5>
                     <hr>
@@ -83,11 +80,11 @@
                     <div class="card  h-100 font-weight-light" id="cards">
                         <div class="card-body text-center ">
                             <img src="assets/img/html.png" alt="imagem" class="img-fluid" style="width: 100px;">
-                            <hr class="my-1 " />
+                            <hr class="my-2 " />
                             <p>O HTML é o componente básico da web, na qual a linguagem é escrita nas páginas da Web e interpretada pelo navegador.</p>
-                            <hr class="my-1 " />
+                            <hr class="my-3 " />
                             <a href="https://www.homehost.com.br/blog/tutoriais/o-que-e-html/">
-                                <button type="button" class="btn w-100 mb-3" style="background-color: rgba(100, 23, 151, 0.658); color: white;">Saiba Mais</button> </a>
+                                <button type="button" class="btn w-100 mb-3" style="background-color: rgba(38, 192, 197, 0.904); color: white;">Saiba Mais</button> </a>
                         </div>
                     </div>
                 </div>
@@ -110,11 +107,11 @@
                     <div class="card  h-100 font-weight-light" id="cards">
                         <div class="card-body text-center ">
                             <img src="assets/img/css.png" alt="imagem" class="img-fluid" style="width: 100px;">
-                            <hr class="my-1 " />
+                            <hr class="my-2 " />
                             <p>O CSS foi desenvolvido para habilitar a separação do conteúdo e formato de um documento, incluindo elementos como cores, formatos de fontes e layout..</p>
-                            <hr class="my-1 " />
+                            <hr class="my-3 " />
                             <a href="https://www.tecmundo.com.br/programacao/2705-o-que-e-css-.htm">
-                                <button type="button" class="btn w-100 mb-3" style="background-color: rgba(100, 23, 151, 0.658); color: white;">Saiba Mais</button> </a>
+                                <button type="button" class="btn w-100 mb-3" style="background-color:rgba(38, 192, 197, 0.904); color: white;">Saiba Mais</button> </a>
                         </div>
                     </div>
                 </div>
@@ -137,11 +134,11 @@
                     <div class="card  h-100 font-weight-light" id="cards">
                         <div class="card-body text-center ">
                             <img src="assets/img/bootstrap.png" alt="imagem" class="img-fluid" style="width: 100px;">
-                            <hr class="my-1 " />
+                            <hr class="my-2 " />
                             <p>O Bootstrap é uma ferramenta gratuita para desenvolvimento HTML, CSS e JS, que auxilia no desenvolviemnto de projetos responsivos para dispositivos móveis na web.</p>
-                            <hr class="my-1 " />
+                            <hr class="my-3 " />
                             <a href="https://www.tecmundo.com.br/programacao/2705-o-que-e-css-.htm">
-                                <button type="button" class="btn w-100 mb-3" style="background-color: rgba(100, 23, 151, 0.658); color: white;">Saiba Mais</button> </a>
+                                <button type="button" class="btn w-100 mb-3" style="background-color: rgba(38, 192, 197, 0.904); color: white;">Saiba Mais</button> </a>
                         </div>
                     </div>
                 </div>
@@ -151,14 +148,20 @@
         </section>
 
         <!-- Sobre-->
-        <section id="sobre" class="text-center mt-4">
-            <div class="row">
+        <section class="text-center mt-4">
+            <div class="row ">
+                <div class="col-12 ">
+                    <h3 class="font-weight-light"> Sobre Mim </h3>
+                    <hr>
+                </div>
+            </div>
+            <div class="row" id="sobre">
                 <div class="col-md ">
                     <img src="assets/img/nanda.1.jpg " alt="Fernanda Ingrid " class="img-fluid p-1 m-3 bg-white " style="width:150px;">
                 </div>
                 <div class=" col-md  m-5 font-weight-light ">
-                    <p> Graduada em Psicologia <small> pela UNIP.</small></P>
-                    <p>Técnico em Desenvolvimento de Sistemas na Etec.<small> - Cursando</small></P>
+                    <h5> Graduada em Psicologia <small> pela UNIP.</small></h5>
+                    <h5>Técnico em Desenvolvimento de Sistemas na Etec.<small> - Cursando</small></h5>
                 </div>
                 <div class="col-md  mt-5 ">
                     <p>
@@ -259,18 +262,18 @@
         <section class="text-center">
             <div class="row ">
                 <div class="col-12 mt-5">
-                    <h3 class="font-weight-light"> Contatos </h3>
+                    <h3 class="font-weight-light"> Meus Contatos </h3>
                     <hr>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-md rounded mb-5 " id="colunas2">
                     <div class="card  h-100 font-weight-light" id="contatos">
                         <div class="card-body text-center ">
                             <h4>ENDEREÇO</h4>
                             <hr class="my-1 " />
-                            <p>Estrada da Lagoa, 1.011 - Lagoa - CEP 06730-000 - Vargem Grande Paulista/SP</p>
+                            <p>Estrada da Lagoa, 1.011 - Lagoa </p>
+                            <p>CEP 06730-000 - Vargem Grande Paulista/SP</p>
                         </div>
                     </div>
                 </div>
@@ -279,7 +282,8 @@
                         <div class="card-body text-center; ">
                             <h4>TELEFONE</h4>
                             <hr class="my-1 " />
-                            <h5>+55 (11) 99505-6742</h5>
+                            <p>Whatsaap</p>
+                            <p>+55 (11) 99505-6742</p>
 
                         </div>
                     </div>
@@ -288,9 +292,9 @@
                     <div class="card  h-100 font-weight-light" id="contatos">
                         <div class="card-body text-center; ">
                             <h4>E-MAIL</h4>
-                            <hr class="my-1 " />
-                            <h6>fernandaingrid.psicologia@gmail.com</h6>
-
+                            <hr class="my-1" />
+                            <p>fernandaingrid.psicologia@gmail.com</p>
+                            <p>fernandaferreira.165@etec.sp.gov.br</p>
                         </div>
                     </div>
                 </div>
@@ -304,9 +308,11 @@
 
     <!-- Rodape-->
     <footer>
-        <div class="text-center p-4">
-            <h5 class="font-weight-light">Developer Fernanda Ingrid</h5>
-            <h5 class="font-weight-light">Copyright 2021</h5>
+        <div class="container-fluid bg-dark" style="color:white">
+            <div class="text-center p-4">
+                <h5 class="font-weight-light">Developer Fernanda Ingrid</h5>
+                <h5 class="font-weight-light">Copyright 2021</h5>
+            </div>
         </div>
     </footer>
 
