- Links no Footer.
- Atualização de dados.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section id="home">
             <div class="row text-center mt-5">
                 <div class="col-12">
-                    <h3 class="m-3 font-weight-light"> Desenvolvimento de Sitemas <small> < Programação Web > </Programa></small></h3>
+                    <h3 class="m-3 font-weight-light"> Desenvolvimento de Sitemas <em> - Programação Web  </em></h3>
                     <hr>
                     <h5 class="font-weight-light"> Para o desenvolvimento desse projeto, utilizei recursos do html, css e bootstrap. </h5>
                     <hr>
@@ -161,11 +161,11 @@
                 </div>
                 <div class=" col-md  m-5 font-weight-light ">
                     <h5> Graduada em Psicologia <small> pela UNIP.</small></h5>
-                    <h5>Técnico em Desenvolvimento de Sistemas na Etec.<small> - Cursando</small></h5>
+                    <h5>Técnico em Desenvolvimento de Sistemas na Etec<small> - Cursando.</small></h5>
                 </div>
                 <div class="col-md  mt-5 ">
                     <p>
-                        <img src="assets/img/Linkedin.png " alt="Linkedin" class="img-fluid " style="width: 50px; ">
+                        <img src="assets/img/Linkedin.png " alt="Linkedin" class="img-fluid " style="width: 70px; ">
                     </p>
                     <a href="https://www.linkedin.com/feed/ ">
                         <button type="button " class="btn btn-outline-white w-80 mb-3 font-weight-light" style="background-color: white; color: rgb(65, 201, 206); "><b>Acesse meu linkedin</b></button> </a>
@@ -188,11 +188,11 @@
                 <div class="col-md-6 text-primary font-weight-light">
                     <dl>
                         <dt class="mt-1 py-3 h5">Familia Mirror</dt>
-                        <dd>- Imagens e cores predefinidas</dd>
-                        <dd>- Layout e formatação livre</dd>
-                        <dt class="mt-1 py-3 h5">WebSite- CSS</dt>
-                        <dd>- Tema livre </dd>
-                        <dd>- Introdução do Style CSS </dd>
+                        <em><dd>- Imagens e cores predefinidas</dd>
+                        <dd>- Layout e formatação livre</dd></em>
+                        <dt class="mt-1 py-3 h5">WebSite - CSS</dt>
+                        <em><dd>- Tema livre </dd>
+                        <dd>- Introdução do Style CSS </dd></em>
                     </dl>
                 </div>
                 <div class="col-md-6">
@@ -308,12 +308,26 @@
 
     <!-- Rodape-->
     <footer>
-        <div class="container-fluid bg-dark" style="color:white">
-            <div class="text-center p-4">
-                <h5 class="font-weight-light">Developer Fernanda Ingrid</h5>
-                <h5 class="font-weight-light">Copyright 2021</h5>
+
+        <div class="container-fluid bg-dark p-4" style="color:white;">
+            <div class="row">
+                <div class="col-6">
+                </div>
+                <div class="col-6">
+                    <nav>
+                        <ul class="list-unstyled text-center font-weight-light">
+                            <li class="h5">Acesse</li>
+                            <li><a href="#home" style="text-decoration:none; color:white">Home</a> </li>
+                            <li><a href="#sobre" style="text-decoration:none; color:white">Sobre</a> </li>
+                            <li><a href="#projetos" style="text-decoration:none; color:white">Projetos</a> </li>
+                            <li><a href="#contatos" style="text-decoration:none; color:white">Contatos</a> </li>
+                        </ul>
+                    </nav>
+                </div>
+
             </div>
-        </div>
+            <h5 class="font-weight-light text-center">Developer Fernanda Ingrid</h5>
+            <h5 class="font-weight-light text-center mb-3">Copyright 2021</h5>
     </footer>
 
     <!-- JavaScript (Opcional) -->
