--- a/index.html
+++ b/index.html
@@ -52,94 +52,47 @@
         <section id="home">
             <div class="row text-center mt-5">
                 <div class="col-12">
-                    <h3 class="m-3 font-weight-light"> Desenvolvimento de Sitemas <em> - Programação Web  </em></h3>
+                    <h4 class="m-3 font-weight-light"> DESENVOLVIMENTO DE SISTEMAS <em> - PROGRAMAÇÃO WEB  </em></h4>
                     <hr>
                     <h5 class="font-weight-light"> Para o desenvolvimento desse projeto, utilizei recursos do html, css e bootstrap. </h5>
                     <hr>
                 </div>
             </div>
 
-            <!--Coluna 1-->
-            <!-- <div class="col-md-4 px-3">
-                <div class="m-5">
-                    <img src="assets/img/html.png" alt="imagem" class="img-fluid" style="width: 100px;">
-                </div>
-                <div class="m-1 py-1">
-                    <p>O HTML é o componente básico da web, na qual a linguagem é escrita nas páginas da Web e interpretada pelo navegador.</p>
-                </div>
-                <div class="mt-3 py-1">
-                    <a href="https://www.homehost.com.br/blog/tutoriais/o-que-e-html/">
-                        <button type="button" class="btn w-100 mb-3" style="background-color: rgba(100, 23, 151, 0.658); color: white;">Saiba Mais</button> </a>
-
-                </div>
-            </div> -->
-
             <div class="row text-center font-weight-light">
-                <!--Coluna 1-->
+                <!--Coluna HTML-->
                 <div class="col-md-4 rounded mb-5 " id="colunas">
-                    <div class="card  h-100 font-weight-light" id="cards">
-                        <div class="card-body text-center ">
-                            <img src="assets/img/html.png" alt="imagem" class="img-fluid" style="width: 100px;">
-                            <hr class="my-2 " />
-                            <p>O HTML é o componente básico da web, na qual a linguagem é escrita nas páginas da Web e interpretada pelo navegador.</p>
-                            <hr class="my-3 " />
-                            <a href="https://www.homehost.com.br/blog/tutoriais/o-que-e-html/">
-                                <button type="button" class="btn w-100 mb-3" style="background-color: rgba(38, 192, 197, 0.904); color: white;">Saiba Mais</button> </a>
-                        </div>
+                    <div class="card card-body h-100 text-center font-weight-light" id="cards">
+                        <img src="assets/img/html.png" alt="imagem" class="img-fluid mx-auto" style="width: 100px;">
+                        <hr class="my-2 " />
+                        <p>O HTML é o componente básico da web, na qual a linguagem é escrita nas páginas da Web e interpretada pelo navegador.</p>
+                        <hr class="my-3 " />
+                        <a href="https://www.homehost.com.br/blog/tutoriais/o-que-e-html/">
+                            <button type="button" class="btn w-100 mb-3" style="background-color: rgba(38, 192, 197, 0.904); color: white;">Saiba Mais</button> </a>
                     </div>
                 </div>
 
-                <!--Coluna 2-->
-                <!-- <div class="col-md-4 px-3">
-                <div class="m-5">
-                    <img src="assets/img/css.png" alt="imagem" class="img-fluid" style="width: 100px;">
-                </div>
-                <div class="m-1 py-1">
-                    <p>O CSS foi desenvolvido para habilitar a separação do conteúdo e formato de um documento, incluindo elementos como cores, formatos de fontes e layout.</p>
-                </div>
-                <div class="mt-3 py-1">
-                    <a href="https://www.tecmundo.com.br/programacao/2705-o-que-e-css-.htm">
-                        <button type="button" class="btn w-100 mb-3" style="background-color: rgba(100, 23, 151, 0.658); color: white;">Saiba Mais</button> </a>
-                </div>
-            </div> -->
-                <!--Coluna 2-->
+                <!--Coluna CSS-->
                 <div class="col-md-4 rounded mb-5 " id="colunas">
-                    <div class="card  h-100 font-weight-light" id="cards">
-                        <div class="card-body text-center ">
-                            <img src="assets/img/css.png" alt="imagem" class="img-fluid" style="width: 100px;">
-                            <hr class="my-2 " />
-                            <p>O CSS foi desenvolvido para habilitar a separação do conteúdo e formato de um documento, incluindo elementos como cores, formatos de fontes e layout..</p>
-                            <hr class="my-3 " />
-                            <a href="https://www.tecmundo.com.br/programacao/2705-o-que-e-css-.htm">
-                                <button type="button" class="btn w-100 mb-3" style="background-color:rgba(38, 192, 197, 0.904); color: white;">Saiba Mais</button> </a>
-                        </div>
+                    <div class="card card-body text-center h-100 font-weight-light" id="cards">
+                        <img src="assets/img/css.png" alt="imagem" class="img-fluid mx-auto" style="width: 100px;">
+                        <hr class="my-2 " />
+                        <p>O CSS foi desenvolvido para habilitar a separação do conteúdo e formato de um documento, incluindo elementos como cores, formatos de fontes e layout..</p>
+                        <hr class="my-3 " />
+                        <a href="https://www.tecmundo.com.br/programacao/2705-o-que-e-css-.htm">
+                            <button type="button" class="btn w-100 mb-3" style="background-color:rgba(38, 192, 197, 0.904); color: white;">Saiba Mais</button> </a>
                     </div>
                 </div>
 
-                <!--Coluna 3-->
-                <!-- <div class="col-md-4 px-3">
-                <div class=" m-5 py-1">
-                    <img src="assets/img/bootstrap.png" alt="imagem" class="img-fluid" style="width: 100px;">
-                </div>
-                <div class="m-1 py-1">
-                    <p>O Bootstrap é uma ferramenta gratuita para desenvolvimento HTML, CSS e JS, que auxilia no desenvolviemnto de projetos responsivos para dispositivos móveis na web.</p>
-                </div>
-                <div class="mt-3 py-1">
-                    <a href="https://www.tecmundo.com.br/programacao/2705-o-que-e-css-.htm">
-                        <button type="button" class="btn w-100 mb-3" style="background-color: rgba(100, 23, 151, 0.658); color: white;">Saiba Mais</button> </a>
-                </div>
-            </div> -->
-                <!--Coluna 3-->
+                <!--Coluna BOOTSTRAP-->
                 <div class="col-md-4 rounded mb-5 " id="colunas">
-                    <div class="card  h-100 font-weight-light" id="cards">
-                        <div class="card-body text-center ">
-                            <img src="assets/img/bootstrap.png" alt="imagem" class="img-fluid" style="width: 100px;">
-                            <hr class="my-2 " />
-                            <p>O Bootstrap é uma ferramenta gratuita para desenvolvimento HTML, CSS e JS, que auxilia no desenvolviemnto de projetos responsivos para dispositivos móveis na web.</p>
-                            <hr class="my-3 " />
-                            <a href="https://www.tecmundo.com.br/programacao/2705-o-que-e-css-.htm">
-                                <button type="button" class="btn w-100 mb-3" style="background-color: rgba(38, 192, 197, 0.904); color: white;">Saiba Mais</button> </a>
-                        </div>
+                    <div class="card  card-body text-center h-100 font-weight-light" id="cards">
+                        <img src="assets/img/bootstrap.png" alt="imagem" class="img-fluid mx-auto" style="width: 100px;">
+                        <hr class="my-2 " />
+                        <p>O Bootstrap é uma ferramenta gratuita para desenvolvimento HTML, CSS e JS, que auxilia no desenvolviemnto de projetos responsivos para dispositivos móveis na web.</p>
+                        <hr class="my-3 " />
+                        <a href="https://www.tecmundo.com.br/programacao/2705-o-que-e-css-.htm">
+                            <button type="button" class="btn w-100 mb-3" style="background-color: rgba(38, 192, 197, 0.904); color: white;">Saiba Mais</button> </a>
                     </div>
                 </div>
 
@@ -148,14 +101,14 @@
         </section>
 
         <!-- Sobre-->
-        <section class="text-center mt-4">
+        <section class="text-center mt-4 py-5" id="sobre">
             <div class="row ">
                 <div class="col-12 ">
-                    <h3 class="font-weight-light"> Sobre Mim </h3>
+                    <h4 class="font-weight-light"> SOBRE MIM </h4>
                     <hr>
                 </div>
             </div>
-            <div class="row" id="sobre">
+            <div class="row">
                 <div class="col-md ">
                     <img src="assets/img/nanda.1.jpg " alt="Fernanda Ingrid " class="img-fluid p-1 m-3 bg-white " style="width:150px;">
                 </div>
@@ -178,7 +131,7 @@
         <section id="projetos">
             <div class="row text-center">
                 <div class="col-12 mt-5">
-                    <h3 class="font-weight-light">Projetos do Curso</h3>
+                    <h4 class="font-weight-light">PROJETOS DO CURSO</h4>
                     <hr>
                     <h5 class="font-weight-light"> Meus primeiros projetos desenvolvidos com recursos do HTML + CSS </h5>
                     <hr>
@@ -247,7 +200,6 @@
                 <div class="col-md-8">
                     <h1 class="m-5 font-weight-light"> Gostaria de conhecer outros projetos?</h1>
                 </div>
-
                 <div class="col-md-4">
                     <p>
                         <img src="assets/img/github.png " alt="github" class="img-fluid " style="width: 100px;">
@@ -262,40 +214,33 @@
         <section class="text-center">
             <div class="row ">
                 <div class="col-12 mt-5">
-                    <h3 class="font-weight-light"> Meus Contatos </h3>
+                    <h4 class="font-weight-light"> MEUS CONTATOS </h4>
                     <hr>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md rounded mb-5 " id="colunas2">
-                    <div class="card  h-100 font-weight-light" id="contatos">
-                        <div class="card-body text-center ">
-                            <h4>ENDEREÇO</h4>
-                            <hr class="my-1 " />
-                            <p>Estrada da Lagoa, 1.011 - Lagoa </p>
-                            <p>CEP 06730-000 - Vargem Grande Paulista/SP</p>
-                        </div>
+                    <div class="card card-body text-center h-100 font-weight-light" id="contatos">
+                        <h4>ENDEREÇO</h4>
+                        <hr class="my-1 " />
+                        <p>Estrada da Lagoa, 1.011 - Lagoa </p>
+                        <p>CEP 06730-000 - Vargem Grande Paulista/SP</p>
                     </div>
                 </div>
                 <div class="col-md rounded mb-5" id="colunas2">
-                    <div class="card  h-100 font-weight-light" id="contatos">
-                        <div class="card-body text-center; ">
-                            <h4>TELEFONE</h4>
-                            <hr class="my-1 " />
-                            <p>Whatsaap</p>
-                            <p>+55 (11) 99505-6742</p>
-
-                        </div>
+                    <div class="card card-body text-center h-100 font-weight-light" id="contatos">
+                        <h4>TELEFONE</h4>
+                        <hr class="my-1 " />
+                        <p>Whatsaap</p>
+                        <p>+55 (11) 99505-6742</p>
                     </div>
                 </div>
                 <div class="col-md rounded mb-5" id="colunas2">
-                    <div class="card  h-100 font-weight-light" id="contatos">
-                        <div class="card-body text-center; ">
-                            <h4>E-MAIL</h4>
-                            <hr class="my-1" />
-                            <p>fernandaingrid.psicologia@gmail.com</p>
-                            <p>fernandaferreira.165@etec.sp.gov.br</p>
-                        </div>
+                    <div class="card card-body text-center h-100 font-weight-light" id="contatos">
+                        <h4>E-MAIL</h4>
+                        <hr class="my-1" />
+                        <p>fernandaingrid.psicologia@gmail.com</p>
+                        <p>fernandaferreira.165@etec.sp.gov.br</p>
                     </div>
                 </div>
             </div>
